--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,7 @@ header h1 {
 
 .contenido-presupuesto p.negativo,
 .contenido-presupuesto p.negativo span {
-  color: red;
+  color: #dc2626;
 }
 
 .contenido-presupuesto span {
